// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.daml.lf.speedy.repl";
option java_outer_classname = "ReplServiceProto";

package replservice;

service ReplService {
  rpc LoadPackages (LoadPackagesRequest) returns (LoadPackagesResponse);
  rpc RunScript (RunScriptRequest) returns (RunScriptResponse);
  rpc ClearResults (ClearResultsRequest) returns (ClearResultsResponse);
}

message LoadPackagesRequest {
  repeated bytes packages = 1;
}

message LoadPackagesResponse {
}

message RunScriptRequest {
  bytes daml_lf_1 = 1;
  string minor = 2;
  enum Format {
    TEXT_ONLY = 0;
    JSON = 1;
  }
  Format format = 3;
}

message ScriptSuccess {
  // Optional result
  string result = 1;
}

message ScriptError {
  // Required
  string error = 1;
}

message RunScriptResponse {
  oneof result {
    ScriptSuccess success = 1;
    ScriptError error = 2;
  }
}

message ClearResultsRequest {
}

message ClearResultsResponse {
}
